[package]
name = "bigint"
version = "0.1.0"
edition = "2021"

[dependencies]
[dependencies.num-integer]
version = "0.1.42"
default-features = false
features = ["i128"]

[dependencies.num-traits]
version = "0.2.16"
default-features = false
features = ["i128"]

[dependencies.rand]
optional = true
version = "0.8"
default-features = false